pin brave-core to ffdeeb7f86ffb2a6126de7cb436fec6112d8c8b6 from PR-1172

--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
       },
       "brave-core": {
         "dir": "src/brave",
-        "branch": "master",
         "repository": {
           "url": "https://github.com/brave/brave-core.git"
-        }
+        },
+        "commit": "ffdeeb7f86ffb2a6126de7cb436fec6112d8c8b6"
       }
     }
   },
